--- a/index.html
+++ b/index.html
@@ -6,77 +6,114 @@
 <title>老吳動物模型手工坊</title>
 <style>
   body, html {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #FFC0CB; /* 浅红色背景 */
-      text-align: center; /* 页面内容居中 */
-    }
-    .header {
-      background: #222; /* 深色背景以增加对比度 */
-      color: #ffffff;
-      padding: 20px 0;
-      font-size: 18px; /* 增大标题字体大小 */    
-    }
-    .container {
-      padding: 20px;
-    }
-    .gallery {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 20px;
-    }
-    .image-group {
-      cursor: pointer;
-      margin-bottom: 10px; /* 图片之间的间距 */
-      display: inline-block; /* 使图片可以设置宽高 */
-    }
-    .image-group img {
-      width: 200px; /* 图片宽度 */
-      height: 150px; /* 图片高度 */
-      object-fit: cover;
-      transition: transform 0.3s ease;
-    }
-    .image-group img.expanded {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(2);
-      z-index: 100;
-      pointer-events: none; /* 防止放大的图片影响其他元素的交互 */
-    }
-    .overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 90;
-    }
-    .contact-info {
-      background: #343a40;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-      margin-top: 30px;
-      border-radius: 0px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-  </style>
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #fff0f7; /* 浅粉色背景 */
+    text-align: center;
+    overflow-x: hidden;
+  }
+  .header {
+    position: relative;
+    padding: 20px 0;
+    background: #ffffff;
+  }
+  .header h1, .header h2 {
+    margin: 0;
+  }
+  .date-time {
+    position: fixed;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(135deg, #89f7fe, #66a6ff); /* 蓝色渐变 */
+    color: #003c82;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    writing-mode: vertical-rl;
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.5;
+    z-index: 1000;
+  }
+  .container {
+    padding: 20px;
+  }
+  .gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .image-group {
+    cursor: pointer;
+    margin-bottom: 10px;
+  }
+  .image-group img {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+  }
+  .image-group img.expanded {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(2);
+    z-index: 100;
+    pointer-events: none;
+  }
+  .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 90;
+  }
+  .contact-info {
+    background: #343a40;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    margin-top: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  .contact-info h2 {
+    margin-bottom: 10px;
+  }
+  .contact-info p {
+    margin: 5px 0;
+  }
+  .contact-info a {
+    color: #fff;
+    text-decoration: none;
+  }
+</style>
 </head>
 <body>
 
 <div class="header">
   <h1>老吳動物模型手工坊</h1>
-    <h2>正宗純手工制造</h2>
+  <h2>正宗純手工制造</h2>
+</div>
+
+<div class="date-time">
+  <span>今天是</span>
+  <span id="dateTime"></span>
 </div>
 
 <div class="container">
   <div class="gallery">
-    <!-- 图片栏位，由上而下居中排列 -->
+    <!-- 图片栏位，由上而下排列 -->
+    <!-- 替换以下图片路径为您的实际图片路径 -->
     <div class="image-group"><img src="https://ossk.cc/file/2a4dbce26a0a292ec7b9e.jpg" alt="Animal Image 1" class="image"></div>
     <div class="image-group"><img src="https://ossk.cc/file/a549d6369564d95293ec4.jpg" alt="Animal Image 2" class="image"></div>
     <div class="image-group"><img src="https://ossk.cc/file/e6cf2f8f673b22749c289.jpg" alt="Animal Image 3" class="image"></div>
@@ -90,35 +127,57 @@
 
 <div class="contact-info">
   <h2>聯繫方式</h2>
-<h2>老吳</h2>
-<p><strong>手機:</strong> <a href="mailto:contact@example.com">contact@example.com</a></p>
-  <p><strong>Line:</strong> <a href="tel:123-456-7890">123-456-7890</a></p>
+  <h2>老吳</h2>
+  <p><strong>手機:</strong> <a href="tel:123-456-7890">123-456-7890</a></p>
+  <p><strong>Line:</strong> <a href="http://line.me/ti/p/5001120">5001120</a></p>
+  <!-- 确保Line链接是正确的 -->
 </div>
 
 <script>
+  // 时钟功能
+  function updateDateTime() {
+    const now = new Date();
+    const year = now.getFullYear();
+    const month = (now.getMonth() + 1).toString().padStart(2, '0');
+    const day = now.getDate().toString().padStart(2, '0');
+    document.getElementById('dateTime').textContent = `${year}-${month}-${day}`;
+  }
+  setInterval(updateDateTime, 1000);
+  updateDateTime(); // 初始化时钟
+
+  // 图片放大功能
   let expandedImg = null;
   const overlay = document.getElementById('overlay');
 
   document.querySelectorAll('.image').forEach(img => {
     img.addEventListener('click', function() {
       if (expandedImg === this) {
-        // 如果点击的是当前已经放大的图片，则恢复原状
         this.classList.remove('expanded');
         expandedImg = null;
         overlay.style.display = 'none';
       } else {
-        // 否则，放大图片并显示遮罩层
         this.classList.add('expanded');
         expandedImg = this;
         overlay.style.display = 'block';
+        this.style.position = 'fixed';
+        this.style.top = '50%';
+        this.style.left = '50%';
+        this.style.transform = 'translate(-50%, -50%) scale(2)';
+        this.style.zIndex = '100';
+        this.style.pointerEvents = 'none';
       }
     });
   });
 
-  // 点击遮罩层时隐藏放大的图片
   overlay.addEventListener('click', function() {
     if (expandedImg) {
       expandedImg.classList.remove('expanded');
+      expandedImg.style.transform = '';
+      expandedImg.style.position = '';
+      expandedImg.style.top = '';
+      expandedImg.style.left = '';
+      expandedImg.style.zIndex = '';
+      expandedImg.style.pointerEvents = '';
       expandedImg = null;
       overlay.style.display = 'none';
     }
