--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 <style>
 body, html {
     margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #fff0f7; /* 浅粉色背景 */
-    text-align: center;
-    overflow-x: hidden;
+padding: 0;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+background-image: url('https://img.picgo.net/2024/08/09/100001016678588bce22cf558f.md.png'); /* 替换为你的图片URL */
+background-repeat: repeat; /* 背景图片重复平铺 */
+background-position: 0 0; /* 背景图片从左上角开始平铺 */
+text-align: center;
+overflow-x: hidden;
   }
   .header {
     position: relative;
     padding: 20px 0;
-    background: #ffffff;
+    background: #fff0f7;
   }
   .header h1, .header h2 {
     margin: 0;
