--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ overflow-x: hidden;
 
       <div id="waline">留言區域</div>
   <div id="article-info">
-  當前瀏覽量: <span class="waline-pageview-count" data-path="<Your/Path/Name>" />
+  當前瀏覽量: <span class="waline-pageview-count" />
 </div>
 
     <!-- Valine评论系统 -->
